k8s/backend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rush-hour-backend
spec:
  selector:
    app: rush-hour-backend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
