k8s/db-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
