k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
  name: kafka-service
  namespace: kafka
spec:
  ports:
  - port: 9092
    protocol: TCP
  selector:
    app: kafka-broker
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-broker
  name: kafka-broker
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      hostname: kafka-broker
      containers:
      - env:
        - name: KAFKA_BROKER_ID
          value: "1"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value:  zookeeper-service
        # - name: KAFKA_LISTENERS
        #   value: PLAINTEXT://127.0.0.1:9092
        - name: KAFKA_ADVERTISED_LISTENERS
          value: PLAINTEXT://zookeeper-service:9092,PLAINTEXT_INTERNAL://broker:29092
        - name: KAFKA_CREATE_TOPICS
          value: order:1:1, payment:1:1, orchest:1:1, product:1:1
        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
          value: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
        image: confluentinc/cp-kafka:7.0.1
        imagePullPolicy: IfNotPresent
        name: kafka-broker
        ports:
        - containerPort: 9092
      # - image: wurstmeister/kafka
