k8s/order-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: rush-hour-order
spec:
  selector:
    app: rush-hour-order
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  3333
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rush-hour-order
  labels:
    app: rush-hour-order
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rush-hour-order
  template:
    metadata:
      labels:
        app: rush-hour-order
    spec:
      # initContainers:
      # - name: wait-for-database
      #   image: ghcr.io/cs-muic/scalable-p1-tnapat2000/pfinal-backend:latest
      #   command: ['python', 'manage.py', 'wait_for_database']
      containers:
      - name: order_db
        image: mariadb:latest
        ports:
          - containerPort: 3306
      - name: order-api
        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-backend:latest
        ports:
          - containerPort:         
      imagePullSecrets:
      - name: rush-hour-dockerconfigjson
