k8s/product-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: rush-hour-product
spec:
  selector:
    app: rush-hour-product
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.jaegertracing.io/inject: "jaeger-production"
  name: rush-hour-product
  labels:
    app: rush-hour-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rush-hour-product
  template:
    metadata:
      labels:
        app: rush-hour-product
    spec:
      # initContainers:
      # - name: wait-for-database
      #   image: ghcr.io/cs-muic/scalable-p1-tnapat2000/pfinal-backend:latest
      #   command: ['python', 'manage.py', 'wait_for_database']
      containers:
      - name: productdb
        image: mariadb:latest
        ports:
          - containerPort: 3306
      - name: product-api
        image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-product_svc:latest
        ports:
          - containerPort: 8001     
      imagePullSecrets:
      - name: rush-hour-dockerconfigjson
