k8s/user_svc_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  labels:
    app: user-svc
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: user-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc
spec:
  selector:
    matchLabels:
      app: user-svc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user-svc
    spec:
      containers:
      - image: mariadb:10.8
        name: mariadb
        ports:
        - containerPort: 3306
          name: user-db
      - image: ghcr.io/big-coconut-team/rush-hour-backend/pfinal-user_svc:latest
        name: user-svc
        ports:
          - containerPort: 8000
            name: user-svc
      imagePullSecrets:
      - name: secret
